[tool.poetry]
name = "securitytrails-wrapper"
version = "0.1.0"
description = ""
authors = ["Kerim <kerim.tricic@dualsharks.com>"]
readme = "README.md"
packages = [{include = "securitytrails_wrapper"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
requests = "^2.31.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

